# NorthstarCTRX

./: .gitignore  CMakeLists.txt  prj.conf
src/: led.c  led.h  main.c  my_esb.c  my_esb.h  my_spi.c  my_spi.h  my_usb.c  my_usb.h  nrf21540.c  nrf21540.h  rf52.c  rf52.h  systime.c
src/Northlib/: ntrp.c  ntrp.h  ntrprouter.c  ntrprouter.h
